# tauri-klin-terminal

./: index.html  package.json  pnpm-lock.yaml  postcss.config.cjs  svelte.config.js  tsconfig.json  vite.config.ts
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: __menu.rst  main.rs  menu.rs
src-tauri/src/commands/: window.rs
src-tauri/src/patch_window/: macos.rs  mod.rs
src/lib/application/: Settings.svelte  TerminalApp.svelte
src/lib/components/context-menu/: ContextMenu.svelte  ContextMenuButton.svelte
src/lib/components/control-input/: ControlInput.svelte
src/lib/components/control-slider/: ControlSlider.svelte  index.ts
src/lib/components/control-switch/: ControlSwitch.svelte  index.ts
src/lib/components/icon/: Icon.svelte
src/lib/components/input/: Input.svelte
src/lib/components/range-slider/: index.ts
src/lib/components/select/: Select.svelte
src/lib/components/settings-tab/: SettingsTab.svelte
src/lib/components/shortcut-recorder/: ShortcutRecorder.svelte  constants.ts  index.ts
src/lib/components/split-pane/: SplitPane.svelte
src/lib/components/terminal/: Terminal.svelte  index.ts
src/lib/components/terminal-context-menu/: TerminalContextMenu.svelte  index.ts
src/lib/components/theme-card/: ThemeCard.svelte
src/lib/components/titlebar/: Titlebar.svelte  index.ts
src/lib/controllers/: index.ts  terminal.controller.ts
src/lib/core/app/: Main.svelte  Settings.svelte  ShortcutsConnector.svelte
src/lib/helpers/: themes.ts
src/lib/modules/settings/components/control-input/: ControlInput.svelte  index.ts
src/lib/modules/settings/components/control-slider/: ControlSlider.svelte
src/lib/modules/settings/store/: index.ts  keymaps.ts
src/lib/modules/terminal/store/: index.ts  terminal.ts  types.ts
src/lib/shared/components/button/: Button.svelte
src/lib/shared/components/context-menu/: ContextMenu.svelte  ContextMenuButton.svelte  ContextMenuSeparator.svelte  index.ts
src/lib/shared/components/icon/: Icon.svelte
src/lib/shared/components/input/: Input.svelte
src/lib/shared/components/range-slider/: RangeSlider.svelte
src/lib/shared/components/select/: index.ts
src/lib/shared/components/split-pane/: index.ts
src/lib/shared/components/tab/: Tab.svelte
src/lib/shared/components/toggle/: Toggle.svelte
src/lib/shared/helpers/: index.ts  themes.ts
src/lib/stores/keymaps/: index.ts  keymaps.constants.ts  keymaps.helpers.ts  keymaps.store.ts
src/lib/stores/settings/: index.ts  settings.store.ts  settings.types.ts
src/lib/stores/tabs/: index.ts  tabs.store.ts
src/lib/stores/terminal/: index.ts  terminal.store.ts
src/lib/stores/theme/themes/: default.json  index.ts  mountain.json  tokyo-night.json
src/lib/types/: index.ts  terminal.ts
src/lib/views/: index.ts
src/lib/views/advanced/: Advanced.svelte  index.ts
src/lib/views/general/: General.svelte
src/lib/views/keymaps/: Keymaps.svelte  index.ts
src/lib/views/shortcuts-connector/: ShortcutsConnector.svelte  index.ts
src/lib/views/tab-view/: TabView.svelte
src/lib/views/themes/: Themes.svelte  index.ts
tauri-plugin-pty/: Cargo.toml
tauri-plugin-pty/src/: lib.rs  terminado.rs  webterm.rs
tauri-plugin-pty/src/pty/: ws_server.rs
tauri-plugin-pty/src/socket_term/: messages.rs  mod.rs
tauri-plugin-pty/webview-dist/: index.d.ts  index.js
tauri-plugin-pty/webview-src/: index.ts
(+25 files in other folders)
