[package]
name = "ohsmes-terminal"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.8", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha.11", features = [
  "icon-ico",
  "icon-png",
  "macos-private-api",
  "tray-icon"
] }
serde = { version = "1.0", features = ["derive"] }
tauri-plugin-pty = { path = "../tauri-plugin-pty" }
# window-vibrancy = "0.3.2"
serde_json = "1.0"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.24.1"
objc = "0.2"
core-foundation = "0.9.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
