[package]
name = "klin-terminal"
version = "1.0.0"
description = "Terminal app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
tauri = { version = "1.4.1", features = [ "api-all", "macos-private-api"] }
serde = { version = "1.0", features = ["derive"] }
tauri-plugin-pty = { path = "../tauri-plugin-pty" }
window-vibrancy = "0.3.2"
serde_json = "1.0"

warp = "0.3.5"
portable-pty = "0.8.1"
futures-util = "0.3.28"
futures = "0.3.28"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.24.1"
objc = "0.2"
core-foundation = "0.9.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
