[package]
name = "tauri-plugin-pty"
version = "0.0.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.60"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = { version = "2.0.0-alpha.11" }
serde = "1.0"
simple-websockets = "0.1.5"
thiserror = "1.0"
actix-service = "0.4.2"
actix-web-actors = "1.0.2"
actix-web= "1.0.8"
actix= "0.8.3"
futures = "0.1.29"

lazy_static = "1.4.0"
libc = "0.2.66"
log = "0.4.8"
pretty_env_logger = "0.3.1"
serde_json = "1.0.44"
structopt = "0.3.7"
tokio = "0.1.22"
tokio-codec= "0.1.1"
tokio-io= "0.1.12"
tokio-pty-process = "0.4"
